# ray_tracer_challenge

./: Cargo.toml  rustfmt.toml
src/: lib.rs
src/drawing/: canvas.rs  color.rs
src/macros/: fuzzy_eq.rs  mod.rs
src/math/: tuple.rs
